# route-rearrangement

./: .gitignore  README.md  pyproject.toml
route_rearrangement/: __init__.py  audit.py  chain.py  compare.py  deps.py  feasibility.py  filters.py  find_motifs.py  fragments.py  materialize.py  motifs.py  pipeline.py  run.py  schema.py  score.py  search.py  select_examples.py  similarity.py  templates.py
route_rearrangement/data/: competing_smarts.json
route_rearrangement/gui/: __init__.py  __main__.py  gallery.py  model.py  reaction_class.py  render.py  viewer.py
route_rearrangement/literature_precedent/: __init__.py  aggregate.py  ladder.py  report.py  significance.py  sweep.py
route_rearrangement/literature_precedent/tests/: conftest.py  test_ladder.py  test_report.py  test_significance.py
route_rearrangement/metrics/: __init__.py  accessibility.py  base.py  carried_complexity.py  competing.py  complexity.py  electronic.py  exposure.py  isolability.py  plausibility.py  registry.py  selectivity.py  treelstm.py
route_rearrangement/route_synteny/: METHODS.md  __init__.py  clusters.py  corpus.py  decompose.py  nulls.py  precedence.py  report.py  rigidity.py  significance.py  step_identity.py
route_rearrangement/route_synteny/tests/: conftest.py  (+8 more)
route_rearrangement/tests/: conftest.py  test_chain_id.py  test_competing.py  test_convergent.py  test_deps_import.py  test_end_to_end.py  test_feasibility.py  test_fragments.py  test_gui.py  test_materialize_identity.py  test_metrics.py  test_pipeline.py  test_reaction_class.py  test_selectivity.py  test_similarity.py
